AC_INIT
AC_CONFIG_FILES([Makefile])
AC_LANG([C++])
AC_SUBST([TESTFLAGS], [TESTFLAGS])
AX_CHECK_COMPILE_FLAG([-std=c++11], [CXXFLAGS="-std=c++11" TESTFLAGS="-std=c++11"], [exit 1])
AX_CHECK_COMPILE_FLAG([-O2], [CXXFLAGS="$CXXFLAGS -O2"])
AX_CHECK_COMPILE_FLAG([-fprofile-arcs], [TESTFLAGS="$TESTFLAGS -fprofile-arcs"])
AX_CHECK_COMPILE_FLAG([-ftest-coverage], [TESTFLAGS="$TESTFLAGS -ftest-coverage"])
AX_CHECK_COMPILE_FLAG([-g], [TESTFLAGS="$TESTFLAGS -g"])
AX_CHECK_COMPILE_FLAG([-coverage], [TESTFLAGS="$TESTFLAGS -coverage"])
AX_CHECK_COMPILE_FLAG([-Wall], [CXXFLAGS="$CXXFLAGS -Wall"])
AC_OUTPUT
